gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: image-function
        image: us-central1-docker.pkg.dev/bosicloud-testing/image-repo/image-gke:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
