gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image
  labels:
    app: image
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config"}}'
spec:
  type: NodePort
  selector:
    app: image
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
